Style buttons and fix adding right-main spacing(s)

--- a/style.css
+++ b/style.css
@@ -57,6 +57,12 @@ a:visited {
     color: inherit;
 }
 
+button {
+    background-color: rgba(255, 255, 255, 0.678);
+    border: none;
+    border-radius: 0.4rem;
+}
+
 /* Main layout */
 html {
     height: 100%;
@@ -68,47 +74,14 @@ body {
     grid-template-rows: 1fr 5fr;
 
     padding: 2rem 2rem 0rem 2rem;
-    gap: 1rem;
-}
-
-.header {
-    grid-row: 1;
-    grid-column: 2;
-}
-
-.nav {
-    grid-column: 1;
-    grid-row: 1/3;
-
-    flex-direction: column;
-    gap: 4rem;
-}
-
-.nav>nav {
-    flex-direction: column;
-    gap: 4rem;
-}
-
-.main {
-    grid-column: 2;
-    grid-row: 2;
-
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 20fr;
-    gap: var(--gap);
-}
-
-.main-right {
-    gap: 3rem;
-}
-
-.projects {
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: var(--gap);
+    gap: 1.5rem;
 }
 
 /* Header */
 .header {
+    grid-row: 1;
+    grid-column: 2;
+
     background-color: var(--light-grey);
     padding: 1rem;
 }
@@ -135,10 +108,21 @@ body {
     border: none;
 }
 
-/* Sidebar */
+/* Nav */
 .nav {
+    grid-column: 1;
+    grid-row: 1/3;
+
+    flex-direction: column;
+    gap: 4rem;
+
     background-color: var(--light-grey);
     padding: 1rem;
+}
+
+.nav>nav {
+    flex-direction: column;
+    gap: 4rem;
 }
 
 .nav img {
@@ -150,11 +134,44 @@ body {
 }
 
 /* Main */
+.main {
+    grid-column: 2;
+    grid-row: 2;
+
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 20fr;
+    gap: var(--gap);
+}
+
 .main>h2 {
     align-self: flex-end;
 }
 
+.card-icons {
+    justify-content: end;
+    gap: 1rem;
+}
+
+.main-right {
+    gap: 3rem;
+}
+
+.projects {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: var(--gap);
+}
+
 /* Main right */
 .trending>h2 {
+    margin-bottom: 1.5rem;
+}
+
+.announcements h3,
+.trending h3 {
+    margin-bottom: 0.2rem;
+}
+
+.announcements li,
+.trending li {
     margin-bottom: 1.5rem;
 }
